# html5ever4j

data/bench/: Comparison_of_HTML_parsers.html  HTML.html
java/: build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/github/foobar27/html5ever4j/: Html5ever.java  Native.java  ParseOptions.java  Parser.java  QuirksMode.java  SerializeOptions.java  Sink.java  SinkVisitor.java  TokenizerOptions.java  TreeBuilderOptions.java  Visitor.java
java/src/main/java/com/github/foobar27/html5ever4j/atoms/: Atom.java  Atoms.java  LocalName.java  Namespace.java  QualName.java
java/src/test/java/com/github/foobar27/html5ever4j/: Benchmark.java  Html5everTest.java  OptionsTest.java
java/src/test/java/com/github/foobar27/html5ever4j/example/: AnnotationXmlElement.java  Comment.java  Element.java  Node.java  NodeSink.java  ScriptElement.java  TemplateElement.java  Text.java
rust/: Cargo.toml
rust/src/: algorithms.rs  atoms.rs  callbacks.rs  context.rs  helper.rs  jni.rs  lib.rs  native.rs  options.rs
