[package]
name = "html5ever4j"
version = "0.1.0"
authors = ["Sebastien Wagener <sebastien.wagener@gmail.com>"]

[lib]
name = "html5ever4j"
crate-type = ["dylib"]

[dependencies]
html5ever = "0.10.1"
html5ever-atoms = "0.1.1" # TODO should be 0.1.2, but then it's not compatible with servo
string_cache = "*"
tendril = "*"

# required for JNI
libc = "0.2.11"
jni-sys = "0.1.0"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1


